2009-04-27 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary/lang/ja.rb: added encoding flag from a regexp.
	(revert r3424)

2009-04-26 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary/defaultio.rb: applied patch #112. thx kakutani.

2009-04-26 TADA Tadashi <t@tdtds.jp>
	* tdiary/lang/ja.rb: removed encoding flag from a regexp.
	* skel/plugin_error.rhtml: added stack trace.
	* plugin/05referer.rb: force encoded to ASCII-8BIT in load_referer.
	* misc/lib/compatible.rb: added dummy String#encode on ruby 1.8.
	* plugin/00default.rb: added layout support plugins : brr and brl.

2009-04-10 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* skel/update.rhtml: applied patch #78, thx kakutani.

2009-03-30 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* misc/migrate.rb: replace defout to stdout. defout is obsolete.

2009-03-21 TADA Tadashi <t@tdtds.jp>
	* plugin/ja/00default.rb: fixed typo.

2009-03-10 TADA Tadashi <t@tdtds.jp>
	* plugin/00default: moved mail encoding point after all text builded.
	* skel/mail.rtxt.*: changed encoding to UTF-8.

2009-02-28 TADA Tadashi <t@tdtds.jp>
	* tdiary/defaultio.rb: sorted by date before saving.

2009-02-26 TADA Tadashi <t@tdtds.jp>
	* tdiary.rb, misc/lib/compatible.rb: fixed warning on ruby 1.9.1.

2009-02-24 TADA Tadashi <t@tdtds.jp>
	* enable migration on ruby 1.9.1.
	* forced reloading after migration.

2009-02-12 TADA Tadashi <t@tdtds.jp>
	* tdiary.rb, compatible.rb: added suport code against $SAFE BUG of ruby 1.9.1. This is a temporally patch.

2009-01-29 TADA Tadashi <t@tdtds.jp>
	* tdiary.rb: enabled 'require' in plugins on ruby 1.9.1 but it dosen't works well yet.

2009-01-20 TADA Tadashi <t@tdtds.jp>
	* index.rb, update.rb: caught NameError on Encoding::default_external=.

2009-01-18 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.conf.beginner: fix some plugin of header and footer.

2009-01-15 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* add "mixi-mobile-converter" to mobile user agent.
