@@ -1,3 +1,6 @@
+2009-04-28 TADA Tadashi <t@tdtds.jp>
+	* plugin/05referer.rb: opened reading mode of *.tdr file to 'rb'.
+
 2009-04-27 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
 	* tdiary/lang/ja.rb: added encoding flag from a regexp.
 	(revert r3424)
